# wascal

./: 100.js  554.js  Cargo.toml  README.md  header.js  index.html  index.js  restored.wat  wat.wat
.github/workflows/: rust-wasm-deploy.yml  rust-wasm.yml
scripts/: abs.wscl  assoc.wscl  coerce.wscl  comment.wscl  cond.wscl  convert.wscl  fact.wscl  fibo.wscl  field_assign.wscl  float.wscl  format_f64.wscl  funcs.wscl  hello.wscl  log.wscl  loop.wscl  mandel.wscl  mandel_highres.js  mandel_highres.wscl  paren.wscl  putc.wscl  raytrace.wscl  string.wscl  strrepeat.wscl  struct.wscl  struct_infer.wscl  struct_nested.wscl  vector.wscl  zerodiv.wscl
scripts/scripts/: Mandel.java  fibo.wscl  funcs.wscl  hello.wscl  mandel.wscl  mandel_highres.go  mandel_highres.js  mandel_highres.py  mandel_highres.rb  raytrace.wscl  string.wscl  struct.wscl  struct_freed.wscl
src/: compiler.rs  const_table.rs  infer.rs  leb128.rs  lib.rs  main.rs  model.rs  parser.rs  wasm_file.rs
src/compiler/: alloca.rs  count_stack.rs  disasm.rs  emit.rs  malloc.rs  reverse.rs  set.rs  sqrt.rs  strcat.rs
src/model/: struct_set.rs
template/: header.js
waseval/: Cargo.toml
waseval/src/: main.rs
wasm/: Cargo.toml  index.html  package-lock.json  package.json  wasm_api.js  webpack.config.js
wasm/js/: index.js  main.js  parser.js
wasm/scripts/: canvas.wscl  mandel_canvas.wscl  raytrace_canvas.wscl
wasm/src/: lib.rs
