[package]
name = "wascal-wasm"
version = "0.1.0"
authors = ["msakuta"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.93" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

js-sys = "0.3.70"
libm = "0.2.8"

wascal = { path = ".." }
wasm-bindgen-macro-support = "0.2.93"

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'ImageBitmap',
    'Element',
    'HtmlElement',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'HtmlDivElement',
    'CssStyleDeclaration',
    'Node',
    'MouseEvent',
    'Document',
    'ImageData',
    'Window',
    'Storage',
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O2", "--enable-mutable-globals"]
